@@ -7,7 +7,10 @@ import jakarta.inject.Inject;
 import org.gamboni.shopping.server.domain.Item;
 import org.gamboni.shopping.server.domain.Items;
 import org.gamboni.tech.web.js.JavaScript;
-import org.gamboni.tech.web.ui.*;
+import org.gamboni.tech.web.ui.AbstractPage;
+import org.gamboni.tech.web.ui.FavIconResource;
+import org.gamboni.tech.web.ui.Html;
+import org.gamboni.tech.web.ui.Value;
 
 import java.util.List;
 
@@ -28,30 +31,11 @@ public class ShoppingPage extends AbstractPage {
 
         final ItemComponent itemComponent = new ItemComponent(end, style, script);
 
-        return html(ImmutableList.of(style, script,
-                new Resource() {
-                    @Override
-                    public String render() {
-                        throw new UnsupportedOperationException();
-                    }
-
-                    @Override
-                    public String getUrl() {
-                        return "/favicon.png";
-                    }
-
-                    @Override
-                    public Html asElement() {
-                        return new Element("link",
-                                List.of(Html.attribute("rel", "icon"),
-                                        Html.attribute("href", getUrl())));
-                    }
-
-                    @Override
-                    public String getMime() {
-                        return "image/png";
-                    }
-                }), Lists.transform(items, i ->
+        return html(ImmutableList.of(
+                style,
+                script,
+                new FavIconResource("favicon.png", "image/png")
+                ), Lists.transform(items, i ->
                 itemComponent.render(
                         Value.of(mode),
                         Value.of(i.getState()),
